# Space_Exploration_Rover

./: README.md
rover_bringup/: package.xml
rover_bringup/launch/: rover.launch.py  ublox.launch.py  urg_node.launch.py
rover_description/: CMakeLists.txt  package.xml
rover_description/launch/: robot_state_publisher.launch.py
rover_description/robots/: rover.urdf.xacro
rover_description/urdf/: inertials.xacro  materials.xacro
rover_description/urdf/bases/: body.urdf.xacro  bogie.urdf.xacro  differential.urdf.xacro  rocker.urdf.xacro  turnbuckle.urdf.xacro
rover_description/urdf/sensors/: all_sensors.urdf.xacro  asus_xtion.urdf.xacro  hokuyo.urdf.xacro  imu.urdf.xacro
rover_description/urdf/wheels/: corner.urdf.xacro  wheel.urdf.xacro
rover_gazebo/: CMakeLists.txt  package.xml
rover_gazebo/launch/: curiosity.launch.py  forest.launch.py  gazebo.launch.py  low_moon.launch.py  mars.launch.py
rover_gazebo/models/crater/: model.config
rover_gazebo/models/curiosity_path/: model.config
rover_gazebo/models/jaggedrock/: model.config
rover_gazebo/models/low_moon/: model.config
rover_gazebo/models/mars_terrain/: model.config
rover_gazebo/models/moon/: model.config
rover_gazebo/models/rock9/: model.config
rover_gazebo/models/rockformation/: model.config
rover_gazebo/models/terrain/: model.config
rover_localization/: package.xml
rover_localization/launch/: ekf.launch.py  localization.launch.py  rgbd_odometry.launch.py  rtabmap.launch.py
rover_motor_controller/: package.xml  setup.py
rover_motor_controller/launch/: motor_controller.launch.py
rover_motor_controller/test/: test_copyright.py
rover_motor_controller_cpp/: package.xml
rover_motor_controller_cpp/launch/: motor_controller.launch.py
rover_msgs/: package.xml
rover_navigation/: package.xml
rover_navigation/launch/: bringup.launch.py  navigation.launch.py
rover_navigation/params/: SmacHybrid_RPP.yaml  SmacHybrid_TEB.yaml  SmacLattice_RPP.yaml  SmacLattice_TEB.yaml
rover_service/: install.sh  rover.sh
rover_teleop/: package.xml  setup.py
rover_teleop/launch/: joy_teleop.launch.py
rover_teleop/rover_teleop/: teleop_keyboard_node.py
rover_teleop/test/: test_flake8.py  test_pep257.py
