<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_bringup</name>
  <version>1.1.0</version>
  <description>Bringup package</description>
  <maintainer email="0001ayushkumar@gmail.com">Ayush Kumar</maintainer>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rover_motor_controller_cpp</depend>
  <depend>joy_linux</depend>
  <depend>teleop_twist_joy</depend>
  <depend>urg_node</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>