<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_navigation</name>
  <version>1.1.0</version>
  <description>Rover Navigation2 package</description>
  <maintainer email="0001ayushkumar@gmail.com">Ayush Kumar</maintainer>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>tf2_ros</depend>
  <depend>tf_transformations</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_bringup</depend>
  <depend>navigation2</depend>
  <depend>nav2_smac_planner</depend>
  <depend>nav2_regulated_pure_pursuit_controller</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>